--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <name>Farm2Table</name>
 
     <properties>
-        <java.version>17</java.version> <!-- Use Java 17 or your preferred version -->
-        <spring.boot.version>3.2.2</spring.boot.version> <!-- Latest Spring Boot version -->
+        <java.version>17</java.version>
+        <spring.boot.version>3.2.2</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -127,6 +127,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
