--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8080
 
 # Database Configuration (MySQL example)
 spring.datasource.url=jdbc:mysql://localhost:3306/farm2table
-spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.username=Nas
+spring.datasource.password=Nasi
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
