Fixed Pricing Issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # AI Models Location
 ai.model.path=./ai_models/
+
+# External API Configuration
+app.external.api.openfoodfacts.url=https://world.openfoodfacts.org/api/v0
+app.external.api.usda.url=https://api.nal.usda.gov/fdc/v1
+app.external.api.usda.key=
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=3600s
+
+# Logging Configuration
+logging.level.com.farm2table=INFO
+logging.level.org.springframework.web=INFO
